# custom-game-engine

./: .gitignore  CMakeLists.txt  README.md  example.cpp  main.cpp
headers/: animator.h  buffer.h  common.h  fixed_size_string.h  geo_batch.h  graphics.h  graphics_3d.h  gui.h  includes.h  iterator.h  light.h  material.h  math.h  menu.h  mesh.h  particle_sys.h  save.h  shader.h  sprite_batch.h  state_machine.h  text_batch.h  texture.h  typedefs.h  utils.h  window.h
include/: animator.hpp  buffer.hpp  font_loader.hpp  geo_batch.hpp  gui.hpp  includes.hpp  light.hpp  material.hpp  math.hpp  menu.hpp  mesh.hpp  particle_sys.hpp  save.hpp  shader.hpp  shapes.hpp  sprite_batch.hpp  state_machine.hpp  text_batch.hpp  texture.hpp  typedefs.hpp  utils.hpp  window.hpp
modules/: FindASSIMP.cmake
shaders/: cubemap.frag  cubemap.geom  default.frag  default.vert  default_3d.frag  default_3d.vert  default_3d_frag.glsl  default_3d_vert.glsl  default_frag.glsl  default_vert.glsl  dir_light.frag  dir_light_frag.glsl  geo_batch.frag  geo_batch.vert  geo_batch_frag.glsl  geo_batch_vert.glsl  lighting.vert  lighting_3d.frag  lighting_3d.vert  lighting_3d_frag.glsl  material.frag  material_frag.glsl  point_light.frag  post_processing.frag  spot_light.frag  spot_light_frag.glsl  sprite_batch.vert  sprite_batch_frag.glsl  sprite_batch_vert.glsl
